--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.1.6",
     "date-fns": "^2.29.3",
     "inter-ui": "^3.19.3",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
